  ``Background and Notify'' via the download manager in some terminal,
  reassociate the download with that terminal.  These changes do not
  apply to downloads to external handlers.
* Really retry forever when connection.retries = 0.
* enhancement: Session-specific options.  Any options changed with
  toggle-* actions no longer affect other tabs or other terminals.
* enhancement: Domain-specific options.  Use set_domain in elinks.conf
  to e.g. disable cookies for google.com.  The option manager window
  does not yet support this.
* enhancement 867: Use bracketed paste mode on xterm.  This requires
  xterm patch #228 or later configured with --enable-readline-mouse.
* enhancement 824: Experimental support for combining characters.
  See features.conf for details.
* enhancement: Add a new entry Link Info under Link main menu.
* enhancement: Indicate backgrounded downloads using an unused led.
* enhancement: Display the number of ECMAScript interpreters that have
  been allocated for documents in the Resources dialog.
* Fedora enhancement 346861: Add support for nss_compat_ossl library
  (OpenSSL replacement).
* enhancement 1070: Support 256 colors on fbterm-1.4.
* enhancement 1075: Scrolling the entire contents of dialog boxes.
  Especially useful for multi-file BitTorrent downloads.
* Report if the Lua function edit_bookmark_dialog receives the wrong
  number or types of arguments instead of silently failing.
* enhancement: Add ``Invalidate'' button to the cache manager.
* enhancement: Add ``Search contents'' button to the cache manager with
  which one can search through the cache items' data rather than their
  metadata.

//////////////////////////////////////////////////////////////////////
The following changes should be removed from NEWS before ELinks 0.13.0
is released.  They are currently listed here just to show that they
have already been considered.

* Fixed bugs that were not in previous versions: