@@ -1,0 +1,6 @@
+<html>
+	<head><meta http-equiv="refresh" content="0; url=/" /></head>
+<body>
+	Redirect to / after 0 seconds.
+</body>
+</html>
