@@ -43,6 +43,8 @@ Miscellaneous:
 * Really retry forever when connection.retries = 0.
 * enhancement: Session-specific options.  Any options changed with
   toggle-* actions no longer affect other tabs or other terminals.
+* Do not crash when document.browse.minimum_refresh_time = 0 and
+  a document has a meta refresh with a delay of 0.
 * enhancement: Domain-specific options.  Use set_domain in elinks.conf
   to e.g. disable cookies for google.com.  The option manager window
   does not yet support this.
